@@ -1,3 +1,3 @@
 package data.screens.mainMenu
 
-class MainMenuRepository()
+class MainMenuRepository
