@@ -6,6 +6,7 @@ import androidx.compose.ui.Modifier
 import presentation.reusableUi.greyScale
 
 @Composable
+@Suppress("MagicNumber")
 fun Modifier.setIfDarkMode(): Modifier =
     when (isSystemInDarkTheme()) {
         true -> greyScale(0.77f)
