@@ -1,0 +1,7 @@
+package presentation.style
+
+const val EMPTY_SPACE = 1f
+const val FILLER_SPACE = 3f
+const val COMPONENT_TITLE_WEIGHT = 4f
+const val COMPONENT_BODY_WEIGHT = 17f
+const val COMPONENT_EQUAL_WEIGHT = 1f
